--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Eric Fontaine has been performing on saxophone in Atlanta since 2002 in all sorts of groups and styles, mostly jazz.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atlanta jazz saxophonist</title>
+</head>
+<body>
+    <h1>Atlanta jazz saxophonist</h1>
+    <p>Eric Fontaine has been performing on saxophone in Atlanta since 2002 in all sorts of groups and styles, mostly jazz, as a sidemand mainly and somtimes leader. I tend to ignore calls from unknown phone numbers, so is usually better to find my contact info from someone else and text or email me and let me know who you found my contact info from.</p>
+</body>
+</html>
+
