--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Atlanta jazz saxophonist</h1>
-    <p>Eric Fontaine has been performing on saxophone in Atlanta since 2002 in all sorts of groups and styles, mostly jazz, as a sidemand mainly and somtimes leader. I tend to ignore calls from unknown phone numbers, so is usually better to find my contact info from someone else and text or email me and let me know who you found my contact info from.</p>
+    <p>Eric Fontaine has been performing on saxophone in Atlanta since 2002 in all sorts of groups and styles, mostly jazz, usually as sideman but sometimes as a leader and occassionaly solo gigs.</p>
+    <p>I tend to ignore calls from unknown phone numbers, so it is usually better to find my contact info from someone else, and then let me know who you found my contact info from when you text me. If it is a jazz gig, I'm usually happy playing most standards. If I am supposed to play specific horn lines or songs other than common jazz standards, then sheet music PDFs should be emailed to me. Please let me know details like: the money and how and when I will be paid, the address, the start and stop and call time, the parking/loadin situation, which woodwind(s) I should bring, the dress (I usually assume business casual), the rain plan (if it is an outside gig), and if I need to bring my PA for amplification, etc. And if you want me to put together a small jazz quartet, trio, or duo, then let me know a bit about the event and what type of instruments and style might be appropriate (e.g. whether or not there should be a singer or a drummer).</p>
 </body>
 </html>
-
